ci confiuration updated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,4 @@ jobs:
           command: npm install
       - run:
           name: Test execution and report genaration 
-          command: npm test -- --reporter mochawesome --dev
+          command: npm test -- --dev
